Fixed layout bug, popups inside inner-container got cutoff.

--- a/apparelrow/media/src/partials/_application.sass
+++ b/apparelrow/media/src/partials/_application.sass
@@ -58,7 +58,7 @@ button
     padding: 0 20px
     clear: both
     +pie-clearfix
-    overflow: hidden
+    overflow: visible
 
 #header
   background: transparent image_url(unquote("header-bg.png")) scroll no-repeat center center
